--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -3,6 +3,15 @@ header{
   width: 100%;
   height: 55px;
 }
+.footer{
+  z-index: 98;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 25px;
+  text-align: center;
+  background-color: #ffffff77;
+}
 .header-box-background{
   width: 100%;
   height: 80px;
@@ -118,6 +127,8 @@ header{
 /* widthが1200pxよりも小さくなったとき */
 @media screen and (max-width: 1100px){
   .header-menu{
+    top: 80px;
+    max-height: calc(100vh - 80px);
     display: block;
     width: 100%;
     display: grid;
