--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -26,11 +26,12 @@
   margin-bottom: 60px;
 }
 .wave-group .input {
-  font-size: 16px;
-  padding: 10px 10px 10px 5px;
+  font-size: 18px;
+  padding: 15px 10px 5px 5px;
   display: block;
   width: 320px;
   border: none;
+  border-radius: 5px 5px 0 0;
   border-bottom: 1px solid #C0C0C0;
   background: transparent;
 }
