--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,6 @@
 <% provide(:title, '従業員新規作成') %>
-<% provide(:button_text, '新規作成') %>
-
-<h1>New user</h1>
+<% provide(:button_text, '新規登録') %>
+<% provide(:from_title_text, '従業員新規登録') %>
+<% provide(:from_icon, 'fa-user-plus') %>
 
 <%= render "form", user: @user %>
-
-<br>
-
-<div>
-  <%= link_to "Back to users", users_path %>
-</div>
