従業員のプロフィール確認画面のデザインを追加

--- a/app/assets/stylesheets/user_from.css
+++ b/app/assets/stylesheets/user_from.css
@@ -132,6 +132,18 @@
   margin-top: 40px;
 }
 
+.user-show-area{
+  display: flex;
+  height: 60px;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  font-weight: 600;
+}
+.user-show-area-title{
+  width: 30%;
+}
+
 /* widthが850pxより小さくなったら */
 @media screen and (max-width: 850px) {
   .user-from{
