--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -26,7 +26,7 @@
         <%= link_to root_path, class: "index-user-card-button" do %>
           月別データ
         <% end %>
-        <%= link_to root_path, class: "index-user-card-button" do %>
+        <%= link_to user_attendance_today_path(user), class: "index-user-card-button" do %>
           日別データ
         <% end %>
       </div>
