--- a/app/views/attendances/_form.html.erb
+++ b/app/views/attendances/_form.html.erb
@@ -1,14 +1,14 @@
 <div class="attendance-from">
   <div class="attendance-from-date">
     <div class="attendance-from-date-text">
-      <%= @current_date %>の勤怠追加
+      <%= @current_date %>の<%= yield(:button_text) %>
     </div>
   </div>
   <div>
     従業員： <%= @user.name %>
   </div>
   <div class="attendance-from-body">
-    <%= form_for([@user, @attendance], data: { turbo: false } , url: user_create_attendance_path(@user, @new_create_date)) do |f| %>
+    <%= form_for([@user, @attendance], data: { turbo: false } , url: yield(:request_url)) do |f| %>
       <%= render 'shared/error_messages' %>
 
       <div class="wave-group attendance-from-input">
