休憩時間を表示するように

--- a/app/views/attendances/show_by_day.html.erb
+++ b/app/views/attendances/show_by_day.html.erb
@@ -22,11 +22,11 @@
     </div>
     <div class="attendance-card-time-frame">
       <p>休憩時間</p>
-      <p class="attendance-card-time-frame-text">12分</p>
+      <p class="attendance-card-time-frame-text"><%= @break_time_str %></p>
     </div>
     <div class="attendance-card-time-frame">
       <p>残業時間</p>
-      <p class="attendance-card-time-frame-text">0時間</p>
+      <p class="attendance-card-time-frame-text">--</p>
     </div>
   </div>
   <div class="attendance-card-button">
