--- a/app/views/attendances/show_by_day.html.erb
+++ b/app/views/attendances/show_by_day.html.erb
@@ -49,3 +49,60 @@
   </div>
   ※編集すると管理者に通知されます。
 </div>
+
+<% if !@attendance.nil? %>
+  <div class="attendance-area">
+    <div class="attendance-area-presence">
+      <div class="attendance-area-presence-title">
+        出勤
+      </div>
+      <div class="attendance-area-presence-time">
+        <i class="fa-regular fa-clock"></i>
+        <% if @attendance.present? %>
+          <%= @attendance.start_time.strftime("%H:%M") %>
+        <% else %>
+          --
+        <% end %>
+      </div>
+    </div>
+    <% if !@break_time_list.nil? %>
+      <% @break_time_list.each do |break_data| %>
+
+        <div class="attendance-area-break">
+          <div class="attendance-area-break-title">
+            休憩
+          </div>
+          <div class="attendance-area-break-time">
+            <i class="fa-regular fa-clock"></i>
+            <%= break_data.start_time.strftime("%H:%M") %>
+            <i class="fa-solid fa-minus"></i>
+            <%= break_data.end_time.strftime("%H:%M") %>
+            <p>
+              <%= 
+                break_seconds = break_data.end_time - break_data.start_time
+                break_hours = break_seconds / 3600
+                break_minutes = (break_seconds % 3600) / 60
+                break_time_str = format('%d時間%d分', break_hours.to_i, break_minutes.to_i)
+                "#{break_time_str}"
+              %>
+            </p>
+          </div>
+        </div>
+
+      <% end %>
+    <% end %>
+    <div class="attendance-area-clocking-out">
+      <div class="attendance-area-clocking-out-title">
+        退勤
+      </div>
+      <div class="attendance-area-clocking-out-time">
+        <i class="fa-regular fa-clock"></i>
+        <% if @attendance.present? %>
+          <%= @attendance.end_time.strftime("%H:%M") %>
+        <% else %>
+          --
+        <% end %>
+      </div>
+    </div>
+  </div>
+<% end %>
