--- a/app/assets/stylesheets/user_index.css
+++ b/app/assets/stylesheets/user_index.css
@@ -72,6 +72,7 @@
   text-decoration: none;
   color: #B1D881;
   font-weight: bold;
+  white-space: nowrap;
 }
 .index-user-card-button:hover{
   background-color: #B1D881;
