休憩時間の登録、編集、削除の追加

--- a/app/views/attendances/show_by_day.html.erb
+++ b/app/views/attendances/show_by_day.html.erb
@@ -72,28 +72,44 @@
             休憩
             <p class="attendance-area-break-time-text">
               <%= 
-                break_seconds = break_data.end_time - break_data.start_time
-                break_hours = break_seconds / 3600
-                break_minutes = (break_seconds % 3600) / 60
-                break_time_str = format('%d時間%d分', break_hours.to_i, break_minutes.to_i)
-                "#{break_time_str}"
+                if break_data.end_time.nil? || break_data.start_time.nil?
+                  "--"
+                else
+                  break_seconds = break_data.end_time - break_data.start_time
+                  break_hours = break_seconds / 3600
+                  break_minutes = (break_seconds % 3600) / 60
+                  break_time_str = format('%d時間%d分', break_hours.to_i, break_minutes.to_i)
+                  "#{break_time_str}"
+                end
               %>
             </p>
           </div>
           <div class="attendance-area-break-time">
             <i class="fa-regular fa-clock"></i>
-            <%= break_data.start_time.strftime("%H:%M") %>
+            <%= 
+              if break_data.start_time.nil?
+                "入力なし"
+              else
+                break_data.start_time.strftime("%H:%M")
+              end 
+            %>
             <i class="fa-solid fa-minus"></i>
-            <%= break_data.end_time.strftime("%H:%M") %>
+            <%= 
+              if break_data.end_time.nil?
+                "入力なし"
+              else
+                break_data.end_time.strftime("%H:%M")
+              end
+            %>
             <div class="attendance-card-button">
               <div>
-                <%= link_to user_edit_attendance_path(@user, @new_create_date), class: "index-user-card-button", title: "この休憩時間を編集する" do %>
+                <%= link_to edit_break_path(break_data.id), class: "index-user-card-button", title: "この休憩時間を編集する" do %>
                   <i class="fa-solid fa-pen"></i>
                   編集
                 <% end %>
               </div>
               <div class="index-user-card-delete">
-                <%= button_to "削除", user_delete_attendance_path(@user, @new_create_date), method: :delete, data: { confirm: "本当に削除しますか？" }, title: "この休憩時間を削除する" %>
+                <%= button_to "削除", delete_break_path(break_data.id), method: :delete, data: { confirm: "本当に削除しますか？" }, title: "この休憩時間を削除する" %>
               </div>
             </div>
           </div>
@@ -102,7 +118,7 @@
     <% end %>
     <div class="attendance-area-break">
       <div>
-        <%= link_to root_path, class: "index-user-card-button", title: "休憩時間を追加する" do %>
+        <%= link_to user_new_break_path(@user, @new_create_date), class: "index-user-card-button", title: "休憩時間を追加する" do %>
           <i class="fa-solid fa-plus"></i>
           休憩時間を追加する
         <% end %>
