--- a/app/views/breaks/edit.html.erb
+++ b/app/views/breaks/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "#{@user.name}さんの#{@current_date}の休憩時間を編集") %>
 <% provide(:button_text, "休憩編集") %>
-<% provide(:request_url, update_break_path(@break.id)) %>
+<% provide(:request_url, user_update_break_path(@user, @break.id)) %>
 
 <%= render "form", user: @user, attendance: @attendance, break: @break %>
