--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -31,10 +31,10 @@
     <h2 class="user-from-title"><%= yield(:from_title_text2) %></h2>
   </div>
   <div class="user-from-body">
-    <%= link_to root_path, class: "index-user-card-button" do %>
+    <%= link_to user_attendance_today_path(@user), class: "index-user-card-button" do %>
       日別データ
     <% end %>
-    <%= link_to root_path, class: "index-user-card-button" do %>
+    <%= link_to user_attendance_thismonth_path(@user), class: "index-user-card-button" do %>
       月別データ
     <% end %>
     <%= link_to root_path, class: "index-user-card-button" do %>
